do not output true value in the real bayesian inference

--- a/jupyter_notebook/EmulatorValidation.ipynb
+++ b/jupyter_notebook/EmulatorValidation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -115,12 +115,16 @@
    "source": [
     "# Load validation data\n",
     "validateFolder = path.abspath(\"../validation_data\")\n",
+    "\n",
+    "# Load training data\n",
+    "#validateFolder = path.abspath(\"../training_data\") \n",
+    "\n",
     "validationParams, validationData, validationDataErr = load_validation_data(validateFolder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -131,9 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -342,9 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
